--- a/package.json
+++ b/package.json
@@ -9,12 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@biconomy/mexa": "^3.0.4",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@opengsn/gsn": "^2.1.0",
+    "@openzeppelin/contracts": "^4.7.3",
+    "chai": "^4.3.6",
+    "eth-sig-util": "^3.0.1",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.7.1",
+    "hardhat": "^2.11.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.1",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.3",
+    "bufferutil": "^4.0.6",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "hardhat-gas-reporter": "^1.0.9",
+    "net": "^1.0.2",
+    "request": "^2.88.2",
+    "solidity-coverage": "^0.8.2",
+    "tls": "^0.0.1",
+    "typechain": "^8.1.0",
+    "utf-8-validate": "^5.0.9"
   }
 }
